--- a/templates/contact.htm
+++ b/templates/contact.htm
@@ -6,8 +6,8 @@
 {% block content %}
 <h2>Kontakt</h2>
 <ul>
-    <li>email: eryk.knesz@gmail.com</li>
-    <li>telefon: 000 000 000</li>
+    <li>email: *losowy email*</li>
+    <li>telefon: *losowy numer*</li>
 </ul>
 <h3>Wyślij wiadomość</h3>
 <form action="" method="POST">
