--- a/templates/me.html
+++ b/templates/me.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 <h2>O mnie</h2>
-<p><strong>imię:</strong> Eryk</p>
-<p><strong>nazwisko:</strong> Knesz</p>
+<p><strong>imię:</strong> Sebastian</p>
+<p><strong>nazwisko:</strong> Chmielewski</p>
 <p>Zobacz jak się ze mną skontaktować, kliknij: 
     <a href="contact.html">tutaj</a>
 </p>
