--- a/templates/parent.html
+++ b/templates/parent.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
-        <title>Eryk - {% block title %}{% endblock %}</title>
+        <title>Sebastian - {% block title %}{% endblock %}</title>
     </head>
     <body>
         <div>
             <h1>Witaj na mojej stronie domowej</h1>
-            <img src="{{url_for('static', filename='dexter.png')}}" />
+            <img src="{{url_for('static', filename='virgil.jpg')}}" />
         </div>
         <div id="content">{% block content %}{% endblock %}</div>
 </html>
