--- a/templates/me.html
+++ b/templates/me.html
@@ -8,6 +8,6 @@
 <p><strong>imię:</strong> Sebastian</p>
 <p><strong>nazwisko:</strong> Chmielewski</p>
 <p>Zobacz jak się ze mną skontaktować, kliknij: 
-    <a href="contact.html">tutaj</a>
+    <a href="contact">tutaj</a>
 </p>
 {% endblock %}
